a.peg
package main

type Calculator Peg {

}

expression <- open_p operation value value close_p !.

operation <- ( '+' / '-' / '*' / '/' ) s { println("operation") }
value <- < [0-9]* > s { println("pushval")
	machine.PushVal(to_int(buffer[begin:end])) }
open_p <- '(' s
close_p <- ')' s
s <- ( ' ' )*
